--- a/slideshow/slideshow.html
+++ b/slideshow/slideshow.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/reset.css">
     <title>slideshow</title>
-    <style> 
-        .slideshow{
+    <style>
+        .slideshow {
             width: 1200px;
-            height: 367px; 
-            margin:  80px auto;
+            height: 367px;
+            margin: 80px auto;
+            position: relative;
         }
+
         .img-box {
             white-space: 1200xp;
             height: 336px;
         }
-        .img-box ul{
+
+        .img-box ul {
             position: relative;
             overflow: hidden;
             width: 100%;
@@ -28,81 +32,151 @@
             position: absolute;
             width: 730px;
             height: 336px;
+            transition: 0.75s;
         }
+
         .img-box img {
             display: block;
             width: 730px;
             height: 336px;
         }
+
         .line-bar {
             white-space: 1200px;
             height: 31px;
+        }
 
-        }
         .list1 {
+            transform:scale(0.81);
+            transform-origin: 100% 100%;
             z-index: 1;
-            transform: scale(0.81)  ;
-            transform-origin: 0% 100%;  
-            /* 任何元素都有中心点,orign调整合力  方向*/
         }
-        .list2{
-            transform: translateX(235px);
-            /*left会不断引起页面的重绘*/
+
+        .list2 {
+            transform: translateX(300px);
+            transform-origin: 100% 100%;
             z-index: 2;
         }
-        .list3{
-            transform: translateX(730px) scale(0.81)  ;
-            transform-origin: 100% 100% ; 
+
+        .list3 {
+            transform: translateX(730px) scale(0.81);
+            transform-origin: 100% 100%;
             z-index: 1;
-        }
-        .list4 {
-            transform: translateX(1200px) scale(0.81);
-            z-index: 1;
-            transform-origin: 100% 100%;  
-        }
-        .list5{
-            transform: translateX(1600px) scale(0.81);
-            z-index: 1;
-            transform-origin: 100% 100%;  
         }
 
-        .line-bar {
-            text-align: center;
+        .list4 {
+            transform: translateX(1200px) scale(0.81);
+            transform-origin: 100% 100%;
+            z-index: 1;
         }
-        .line-bar span {
-            display: inline-block;
-            width: 35px;
-            height: 3px;
-            background-color: #ccc; 
+
+        .list5 {
+            transform: translateX(1600px) scale(0.81);
+            transform-origin: 100% 100%;
+            z-index: 1;
+        }
+        .dire {
+            position: absolute;
         }
     </style>
 </head>
+
 <body>
     <!--div.slideshow>(div.img-box>ul>li.list$*5>img[src="img/sky-$.jpg"])+div.line-bar>span*5-->
     <div class="slideshow">
-        <div class="img-box">
-            <ul>
-                <li class="list1"><img src="img/sky-1.jpg" alt=""></li>
-                <li class="list2"><img src="img/sky-2.jpg" alt=""></li>
-                <li class="list3"><img src="img/sky-3.jpg" alt=""></li>
-                <li class="list4"><img src="img/sky-4.jpg" alt=""></li>
-                <li class="list5"><img src="img/sky-5.jpg" alt=""></li>
-            </ul>
+        <div class="dire">
+            <div class="dire-left">></div>
+            <div class="dire-right">
+                <</div>
+            </div>
+            <div class="img-box">
+                <ul>
+                    <li class="list1">
+                        <img src="img/sky-1.jpg" alt="">
+                    </li>
+                    <li class="list2">
+                        <img src="img/sky-2.jpg" alt="">
+                    </li>
+                    <li class="list3">
+                        <img src="img/sky-3.jpg" alt="">
+                    </li>
+                    <li class="list4">
+                        <img src="img/sky-4.jpg" alt="">
+                    </li>
+                    <li class="list5">
+                        <img src="img/sky-5.jpg" alt="">
+                    </li>
+                </ul>
+            </div>
+            <div class="line-bar">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
-        <div class="line-bar">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-    </div>
-    <script>
-        var aLi =  document.querySelectorAll('li');
-        var aName = [];
-        for(var item of aLi) {
-            aName.push(item.classList[0]);
-         }
-    </script>
+        <script>
+            var aLi = document.querySelectorAll('li');
+            var aSpan = document.querySelectorAll("span");
+            var oImgBox = document.querySelector(".img-box");
+            var aName = [];
+            var index = 0;//初始值
+            var i;
+            var eleList = ["list1", "list3"];
+            var eleAct = ["perPic", "nextPic"];
+
+            btnColor()
+
+            for (var item of aLi) { //遍历所有的数组
+                aName.push(item.classList[0]);//向数组中素有li的class名
+            }
+
+
+
+            function nextPic() {
+                aName.unshift(aName[aLi.length - 1]);//将数组最后一个值复制并插入到数组
+                aName.pop();//删除数组的最后一个元素
+
+                for (var i = 0; len = aLi.length, i < len; i++) {
+                    aLi[i].setAttribute("class", aName[i]);
+                    //重新给每个元素设置新的的名字  
+
+                }
+                index++;
+                if (index > 4) index = 0;
+                btnColor();
+            }
+
+            function perPic() {
+                aName.push(aName[0]);//把数组第一个值复制并插入到数组最后一个位置
+                aName.shift();//删除第一个
+                for (var i = 0; len = aLi.length, i < len; i++) {
+                    aLi[i].setAttribute("class", aName[i]);
+                }
+                index--;
+                if (index < 0) index = 4;
+                btnColor();
+            }
+
+            function btnColor() {
+                for (var item of aSpan) {
+                    item.style.backgroundColor = "#ccc";
+                }
+                aSpan[index].style.backgroundColor = "#45c17c"
+
+            }
+            setInterval(function () {
+                nextPic();
+            }, 3000)
+            oImgBox.addEventListener("click", function (ev) {
+                ev = ev || window.event;
+                var ele = ev.target.parentNode;
+                var eleName = ele.classList[0];
+                window[eleAct[eleList.indexOf(eleName)]]();
+            });
+
+        </script>
 </body>
+
 </html>
