添加一个简单轮播

--- a/myBookmarks/key-nav.html
+++ b/myBookmarks/key-nav.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -15,12 +15,11 @@
 </body>
 <script>
     //1 . 初始化数据
-    init();
-    var aArr = init().aArr;
+    var Arr = init().aArr;
     var oHash = init().oHash;
-
-
-    //2 . 创建键盘
+    
+     
+        //2 . 创建键盘
     keyboard(aArr,oHash);
    
     //3 . 键盘触发事件
